@@ -48,3 +48,12 @@ Se cambiaron los nombres de los niveles
 Se cambio el menu de niveles para que los muestre todos
 Se arreglo la logica de distribucion de SpecialCandyGeneratorCell
 Se cambio la cantidad de caramelos que se asigna a GeneratorCell en Level3
+
+--------------------------
+
+Se creo en GameApp un enum APP_SCENES y un mapa de APP_SCENES a Scene
+Se creo en GameApp un metodo publico setScene(APP_SCENES scene) que pone en stage una Scene
+
+Se creo en CandyGame metodos playerWon() y gameOver() que dan el resultado del estado del juego
+Se agrego a CandyFrame la propiedad GameApp
+Se agrego a CandyFrame metodos para mostrar dialogos de victoria y derrota
